--- a/scriboto-app/results_top.html
+++ b/scriboto-app/results_top.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
- 
+
 <head>
     <title>Scriboto App Results</title>
- 
- 
+
+
     <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
- 
+
     <link href="http://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
- 
- 
+
+
 </head>
- 
+
 <body>
- 
+
     <div class="container">
         <div class="header">
             <nav>
@@ -24,14 +24,14 @@
             </nav>
             <h3 class="text-muted">Scriboto App User Interface - EHR Summary</h3>
         </div>
- 
+
         <div class="jumbotron">
             <h1>Scriboto App</h1>
             <p class="lead"></p>
             <p><a class="btn btn-lg btn-success" href="showHome" role="button">Return Home</a>
+            <p><a class="btn btn-lg btn-success" href="drSpeak" role="button">Doctor Speak</a>
             </p>
         </div>
- 
+
         <div class="row marketing">
             <div class="col-lg-6">
-                
