with improved UI

--- a/scriboto-app/results_bottom.html
+++ b/scriboto-app/results_bottom.html
@@ -1,12 +1,31 @@
-            </div>
- 
-        </div>
- 
-        <footer class="footer">
-            <p>&copy; Scriboto 2018</p>
-        </footer>
- 
-    </div>
+    </div>  
+    <img src="./static/onedoctor.png" style="width:100%;max-width:1000px;margin-top:32px;">
+  </div>
+</div>
+
+
+<script>
+// Tabbed Menu
+function openMenu(evt, menuName) {
+  var i, x, tablinks;
+  x = document.getElementsByClassName("menu");
+  for (i = 0; i < x.length; i++) {
+     x[i].style.display = "none";
+  }
+  tablinks = document.getElementsByClassName("tablink");
+  for (i = 0; i < x.length; i++) {
+     tablinks[i].className = tablinks[i].className.replace(" w3-dark-grey", "");
+  }
+  document.getElementById(menuName).style.display = "block";
+  evt.currentTarget.firstElementChild.className += " w3-dark-grey";
+}
+document.getElementById("myLink").click();
+</script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBu-916DdpKAjTmJNIgngS6HL_kDIKU0aU&callback=myMap"></script>
+<!--
+To use this code on your website, get a free API key from Google.
+Read more at: https://www.w3schools.com/graphics/google_maps_basic.asp
+-->
+
 </body>
- 
 </html>
