--- a/scriboto-app/results_top.html
+++ b/scriboto-app/results_top.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-<title>W3.CSS Template</title>
+<title>Scriboto Results</title>
+<head><link rel="scriboto icon" href="../static/favicon.ico" /></head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -44,9 +45,9 @@ body, html {
 <!-- Menu Container -->
 <div class="w3-container" id="menu">
   <div class="w3-content" style="max-width:700px">
- 
+
     <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">Results</span></h5>
-  
+
     <div class="w3-row w3-center w3-card w3-padding">
       <a href="javascript:void(0)" onclick="openMenu(event, 'Transcription');" id="myLink">
         <div class="w3-col s6 tablink">Transcription</div>
@@ -57,4 +58,3 @@ body, html {
     </div>
 
     <div id="Transcription" class="w3-container menu w3-padding-48 w3-card">
-      
