changing the look

--- a/scriboto-app/results_bottom.html
+++ b/scriboto-app/results_bottom.html
@@ -1,5 +1,5 @@
-    </div>  
-    <img src="./static/onedoctor.png" style="width:100%;max-width:1000px;margin-top:32px;">
+    </div>
+    <!-- <img src="./static/onedoctor.png" style="width:100%;max-width:1000px;margin-top:32px;"> -->
   </div>
 </div>
 
