--- a/scriboto-app/results_top.html
+++ b/scriboto-app/results_top.html
@@ -27,7 +27,7 @@ body, html {
 <div class="w3-top">
   <div class="w3-row w3-padding w3-black">
     <div class="w3-col s5">
-      <a href="showHome" role="button" class="w3-button w3-block w3-black">HOME</a>
+      <a href="showHome" role="button" class="w3-button w3-block w3-black">Home</a>
     </div>
   </div>
 </div>
